HW3/k8s/exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exporter
  template:
    metadata:
      labels:
        app: exporter
    spec:
      containers:
      - name: exporter
        image: prometheus-exporter:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5020
---
apiVersion: v1
kind: Service
metadata:
  name: exporter-service
  labels:
    app: exporter
spec:
  type: ClusterIP
  selector:
    app: exporter
  ports:
    - name: http
      protocol: TCP
      port: 5020
      targetPort: 5020
